--- a/src/css/Ventas.css
+++ b/src/css/Ventas.css
@@ -54,6 +54,16 @@ button {
   border-radius: 5px;
 }
 
+button:disabled {
+  cursor: not-allowed;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  opacity: 0.6;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
 button:hover {
   background-color: #0056b3;
 }
